terraform/resource-subnet.tf
resource "aws_subnet" "public_subnets" {
  count                   = length(var.cidr_public_subnet)
  vpc_id                  = aws_vpc.task_3_vpc.id
  cidr_block              = element(var.cidr_public_subnet, count.index)
  availability_zone       = element(var.eu_availability_zone, count.index)
  map_public_ip_on_launch = true
  tags = {
    Name = "Public Subnet #${count.index + 1}"
  }
}

resource "aws_subnet" "private_subnets" {
  count             = length(var.cidr_private_subnet)
  vpc_id            = aws_vpc.task_3_vpc.id
  cidr_block        = element(var.cidr_private_subnet, count.index)
  availability_zone = element(var.eu_availability_zone, count.index)
  tags = {
    Name = "Private Subnet #${count.index + 1}"
  }
}
